--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,17 +15,21 @@
     <string name="user_name">Eddy Varela</string>
     <string name="address">Miami, Florida</string>
     <string name="rating_sample">4.2/5</string>
-
+    <string name="start_time">Start Time</string>
     <string name="job_title">Job Title</string>
     <string name="location">Location</string>
     <string name="date_posted">Date Posted</string>
     <string name="salary">Salary</string>
-    <string name="start_time">Start Time</string>
     <string name="description">Description</string>
     <string name="requirements">Requirements</string>
     <string name="tags">Tags</string>
     <string name="contact">Contact</string>
     <string name="apply">Apply</string>
     <string name="create_update">Create/Update</string>
+    <string name="post_job">Post Job</string>
+    <string name="job_details">Job Details</string>
+    <string name="logistic_information">Logistic Information</string>
+    <string name="new_job_posting_details">New Job Posting Details</string>
+
 
 </resources>
