added userInformation.kt containing user registration info updated loginActivity.kt function names implemented registerActivity.kt backend updated user_registration_activity.xml to be cleaner created btnanim.xml to use for splash screen updated bottom_nav buttons for home, create, and account added white_rectangle.xml to be used for splash screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Peter and Friends</string>
     <string name="peter_amp_friends"><![CDATA[Peter & Friends]]></string>
-    <string name="home">Home</string>
-    <string name="settings">Account</string>
+    <string name="home">HOME</string>
+    <string name="settings">ACCOUNT</string>
     <string name="messages">Messages</string>
     <string name="greeting">Welcome to Peter and Friends</string>
     <string name="register">Register</string>
