updated messages.png updated job_post_row.xml to a cleaner layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="peter_amp_friends"><![CDATA[Peter & Friends]]></string>
     <string name="home">HOME</string>
     <string name="settings">ACCOUNT</string>
-    <string name="messages">Messages</string>
+    <string name="messages">MESSAGES</string>
     <string name="greeting">Welcome to Peter and Friends</string>
     <string name="register">Register</string>
     <string name="verify_password">Verify Password</string>
