Messages database works for now
Need to twitch to display the right messages for sender and receiver

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,6 @@
     <string name="create_post">CREATE POST</string>
     <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
-
+    <string name="image">Image</string>
+    <string name="delete">Delete</string>
 </resources>
