Job Application is working - will work out the details and logic/testing l8r

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,6 @@
     <string name="datetime">DateTime</string>
     <string name="pay_amt">Pay Amt</string>
     <string name="detail">Details</string>
+    <string name="short_app_name"><![CDATA[P&F]]></string>
+    <string name="log_in">Log in</string>
 </resources>
