Theres a progress bar in the login screen and the header thing is "peter & friends now"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="detail">Details</string>
     <string name="short_app_name"><![CDATA[P&F]]></string>
     <string name="log_in">Log in</string>
+    <string name="create_job">Create Job</string>
 </resources>
