Update xml stylesheets

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="short_app_name"><![CDATA[P&F]]></string>
     <string name="log_in">Log in</string>
     <string name="create_job">Create Job</string>
+    <string name="jobdescription">JobDescription</string>
 </resources>
